Sigil 0.8.2 2014.11.28
    - Validator plugin type which can load validation results into
      the main window validation panel.
    - Corrections to Sigil Plugin Framework Documentation
    - Pull request #17: Fix typos in README.md
    - Additional python plugin interface features:
       - multiple plugin engines now allowed for plugins that 
         work on both python 2.7 and python 3.4
       - launcher revision date interface
       - plugin stdout will now appear immediately in Sigil 
    - Multiple plugin launcher bug fixes:
       - make parsing more robust to poorly formed xhtml
       - modified text iterator to follow spine order
       - bug fixes for readotherfile, and writeotherfile
       - bug fixes for guide types and setting the guide

Sigil 0.8.1 2014.10.12
    - Set minimum OS X version to 10.9.0 in Info.plist so users trying to
      run on older versions of OS X will receive an error dialog instead of
      a crash dialog.
    - Set minimum Windows version to Vista in Installer so installation will
      error when trying to install on XP (which is not supported and Sigil
      binary packages won't run on).
    - Fix issue #21: Use Hunspell WORDCHARS to help in tokenization of words.
    - Pull request #19: Moving plugin description to ToolTips.
    - Pull request #20: Preserve current file name for future save as actions
      if appropriate.
    - Fix bug where save after using input plugin would fail.

Sigil 0.8.0 2014.09.27
    - Plugin framework.
    - Add the svg image tag as an svg inline element (not a block element) and
      add it as an empty element (TidyEmptyTags).
    - Allow user defined list of entities to preserve.
    - Pull request #16: Hardcode menu Plugins in UI, move it before menu Help.
    - Pull request #10: Add ability to move entries in TOC up and down.
    - Pull request #8: Allow pasting HTML as HTML or plain text in BookView.

Sigil 0.7.4 2013.10.27